Update flake configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -143,7 +143,7 @@ addopts = -n auto --cov=pds
 # and you can read more about the tool at https://flake8.pycqa.org/
 [flake8]
 max-line-length = 120
-extend-exclude = _version.py,docs,tests,setup.py
+extend-exclude = docs,tests,setup.py,requirements
 docstring_convention = google
 
 # Ignoring:
@@ -154,7 +154,10 @@ docstring_convention = google
 # E501 prevents flake8 from complaining line lengths > 79. We will use
 # flake8-bugbear's B950 to handle line length lint errors. This trips
 # when a line is > max-line-length + 10%.
-extend-ignore = E203, E501
+#
+# E503 ignores line breaks before binary operators because the opposite advice is soon to become the best
+# practice; see https://www.flake8rules.com/rules/W503.html
+extend-ignore = E203, E501, W503
 
 # Selects following test categories:
 # D: Docstring errors and warnings
@@ -187,8 +190,3 @@ select = D,E,F,N,W,B,B902,B903,B950
 # The generic ``mypy`` settings are blank for now, but there are more specific
 # options below. Note that the section syntax for ``mypy`` includes
 # glob-style wildcards to match file patterns.
-
-
-[mypy-pds.*._version]
-# We don't care about issues in versioneer's files
-ignore_errors = True
