--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,7 @@ dev =
     pytest-xdist        == 2.4.0   # You got multiple cores, right?
     pre-commit          == 2.15.0  # Auto-run checks on every commit
     tox                 ~= 4.11.0  # A way to automate and standardize testing in Python
-    types-requests      ~= 2.31.0.20240218
+    types-requests      == 2.28.11.14
 
 [options.entry_points]
 # Put your entry point scripts here
