Add verbose flag to pytest

--- a/setup.cfg
+++ b/setup.cfg
@@ -122,7 +122,7 @@ omit = */_version.py,*/__init__.py
 #
 # See https://docs.pytest.org/ for more information.
 [tool:pytest]
-addopts = -n auto --cov=pds
+addopts = -n auto --cov=pds -v
 
 
 # Installation Options
