Update query param handling to avoid too many fields

--- a/config/logstash/config/shared/pds-filter.conf
+++ b/config/logstash/config/shared/pds-filter.conf
@@ -514,28 +514,21 @@ filter {
         urldecode {
           field => "[url][queryparams]"
         }
-        # Sanitize queryparam keys to avoid dots in field names
+        # Convert query parameters to array of key-value pairs to prevent field explosion
         ruby {
           code => '
             if event.get("[url][queryparams]").is_a?(Hash)
-              sanitized = {}
+              queryparams_array = []
               event.get("[url][queryparams]").each do |k, v|
-                sanitized[k.gsub(".", "_")] = v
+                queryparams_array << {
+                  "key" => k.gsub(".", "_"),
+                  "value" => v.to_s
+                }
               end
-              event.set("[url][queryparams]", sanitized)
+              event.set("[url][queryparams]", queryparams_array)
             end
           '
-          id => "sanitize_queryparam_keys"
-        }
-        ruby {
-          code => '
-            if event.get("[url][queryparams]").is_a?(Hash)
-              queryparams = event.get("[url][queryparams]")
-              queryparams.each do |k, v|
-                event.set("[url][queryparams][#{k}]", v.to_s)
-              end
-            end
-          '
+          id => "convert_queryparams_to_array"
         }
       }
     } else {
