remove terrafrom lock file

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,10 @@ typescript
 *.tfstate
 *.tfstate.*
 
+# Terraform lock file
+.terraform.lock.hcl
+.terraform/
+
 # Crash log files
 crash.log
 crash.*.log
