--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,10 @@ download_url = https://github.com/NASA-PDS/web-analytics/releases/
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
+    Programming Language :: Python :: 3.13
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
 
