--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,8 @@ commands = pytest
 [testenv:docs]
 deps = .[dev]
 whitelist_externals = python
-commands = python setup.py build_sphinx
+usedevelop = True
+commands = sphinx-build -b html docs/source docs/build/html
 
 [testenv:lint]
 deps = pre-commit
