Add Python 3.12 and 3.13 compatibility
- Update setup.cfg to support Python 3.12+ (changed from 3.13+ only)
- Add Python 3.12 classifier in package metadata
- Update tox.ini to test both Python 3.12 and 3.13
- Update README.md to specify Python 3.12.x or higher
- Update tests/README.md prerequisites to Python 3.12 or 3.13

Resolves #61

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ url = https://github.com/NASA-PDS/web-analytics
 download_url = https://github.com/NASA-PDS/web-analytics/releases/
 classifiers =
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.12
     Programming Language :: Python :: 3.13
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
@@ -56,7 +57,7 @@ namespace_packages = pds
 package_dir =
     = src
 packages = find_namespace:
-python_requires = >= 3.13
+python_requires = >= 3.12
 
 [options.extras_require]
 dev =
