--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,6 +52,8 @@ repos:
         args:
           - '--baseline'
           - '.secrets.baseline'
+          - --disable-plugin
+          - AbsolutePathDetectorExperimental
           - --exclude-files '\.secrets..*'
           - --exclude-files '\.git.*'
           - --exclude-files '\.mypy_cache'
