--- a/setup.cfg
+++ b/setup.cfg
@@ -65,6 +65,7 @@ dev =
     docutils            ~= 0.21    # Newer and therefore better but not so new as to make sphinx-argparse upset
     sphinx              ~= 8.2.3   # Documentation generation
     sphinx-rtd-theme    == 3.0.2   # Documentation theme
+    sphinxcontrib-googleanalytics ~= 0.5  # Google Analytics for documentation
     mypy-zope           == 1.0.13  # Type stubs for zope.interface
     lxml-stubs          == 0.5.1   # Type stubs for lxml, duh
     flake8              == 7.3.0   # Unquestioning adherence to coding stylees
